deployments/agent_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-service
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-service
  template:
    metadata:
      labels:
        app: agent-service
    spec:
      containers:
      - name: agent-service
        image: 925130874351.dkr.ecr.us-east-1.amazonaws.com/cc-mooninsurance:agent-img-v1
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: agent-service
  namespace: ingress-nginx
spec:
  selector:
    app: agent-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
