deployments/branch_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: branch-service
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: branch-service
  template:
    metadata:
      labels:
        app: branch-service
    spec:
      containers:
      - name: branch-service
        image: 925130874351.dkr.ecr.us-east-1.amazonaws.com/cc-mooninsurance:branch-img-v2
        imagePullPolicy: Always
        ports:
        - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: branch-service
  namespace: ingress-nginx
spec:
  selector:
    app: branch-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP
