deployments/integration_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-service
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integration-service
  template:
    metadata:
      labels:
        app: integration-service
    spec:
      containers:
      - name: integration-service
        image: 925130874351.dkr.ecr.us-east-1.amazonaws.com/cc-mooninsurance:integration-img-v2
        ports:
        - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: integration-service
  namespace: ingress-nginx
spec:
  selector:
    app: integration-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
