deployments/sales_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-service
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-service
  template:
    metadata:
      labels:
        app: sales-service
    spec:
      containers:
      - name: sales-service
        image: 925130874351.dkr.ecr.us-east-1.amazonaws.com/cc-mooninsurance:sales-img
        ports:
        - containerPort: 5003

---
apiVersion: v1
kind: Service
metadata:
  name: sales-service
  namespace: ingress-nginx
spec:
  selector:
    app: sales-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
