deployments/ingress_deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moonagenttracker-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: a27535aab203a46c8b905de45be266ba-168835108.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /agent
            pathType: Prefix
            backend:
              service:
                name: agent-service
                port:
                  number: 80
          - path: /integration
            pathType: Prefix
            backend:
              service:
                name: integration-service
                port:
                  number: 80
          - path: /branch
            pathType: Prefix
            backend:
              service:
                name: branch-service
                port:
                  number: 80
          - path: /sales
            pathType: Prefix
            backend:
              service:
                name: sales-service
                port:
                  number: 80
